--- a/assets/bootstrap-5.2.2/scss/_card.scss
+++ b/assets/bootstrap-5.2.2/scss/_card.scss
@@ -65,6 +65,10 @@
   }
 }
 
+.btn{
+  @extend .text-light;
+}
+
 .card-body {
   // Enable `flex-grow: 1` for decks and groups so that card blocks take up
   // as much space as possible, ensuring footers are aligned to the bottom.
